Fixed charts styling on smaller screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,3 @@ $offwhite: #f9f9f9;
 em {
     font-style: italic;
 }
-
-.app-container {
-    width: 100%
-}
