--- a/app/assets/stylesheets/charts.scss
+++ b/app/assets/stylesheets/charts.scss
@@ -31,10 +31,11 @@
         display: flex;
         border-bottom: 2px solid #E9E9E9;
         height: 77px;
-        align-items: center;
         text-decoration: none;
-        margin: auto;
+        align-items: center;
+        justify-content: space-between;
 
+        
         &:hover {
             background-color: #E9E9E9;
         }
@@ -46,9 +47,14 @@
             padding-left: 20px;
             position: absolute;
         }
+        
+        &-details {
+            display: flex;
+            align-items: center;
+        }
 
         &-cover {
-            padding-left: 115px;
+            padding-left: 20%;
             height: 60px;
             width: 60px;
             object-fit: contain;
@@ -65,7 +71,7 @@
 
         &-artist {
             width: 252px;
-            padding-left: 70px;
+            padding-left: 5.5%;
             font-size: 24px;
             font-weight: 100;
             overflow: hidden;
@@ -77,7 +83,7 @@
             font-size: 12px;
             font-weight: 400;
             width: 252px;
-            margin-left: 270px;
+            margin-left: 20%;
             position: relative;
         }
     }
@@ -105,4 +111,10 @@
     font-size: 20px;
     position: absolute;
     left: -35px;
+}
+
+@media screen and (max-width: 768px) {
+    .charts-song-artist {
+        display: none;
+    }
 }
